2008-01-28  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/pam_audit.c: Include pam_modutil_private.h.

	* libpam/pam_item.c (pam_set_item): Fix compiler warning.

	* libpam/pam_end.c (pam_end): Cast to correct pointer type.
	* libpam/include/security/_pam_macros.h (_pam_overwrite_n): Use
	unsigned int.

	* modules/pam_unix/passverify.c: Fix compiling without SELinux
	support.

2008-01-24  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/bigcrypt.c (bigcrypt): Use crypt_r() when
	available.
	* modules/pam_unix/passverify.c (strip_hpux_aging): New function
	to strip HP/UX aging info from password hash.
	(verify_pwd_hash): Call strip_hpux_aging(), use crypt_r() when
	available.

2008-01-23  Tomas Mraz  <t8m@centrum.cz>

	* configure.in: Add test for crypt_r(). Add setting/disabling random
	device support.

	* modules/pam_unix/Makefile.am: Add unix_update.8 manpage generated from
	XML, generate also unix_chkpwd.8 from XML.
	* modules/pam_unix/pam_unix_acct.c: Add rounds parameter to _set_ctrl().
	* modules/pam_unix/pam_unix_auth.c: Likewise.
	* modules/pam_unix/pam_unix_sess.c: Likewise.
	* modules/pam_unix/pam_unix_passwd.c: Likewise.
	* modules/pam_unix/support.c(_set_ctrl): Likewise.
	* modules/pam_unix/support.h: Likewise. Add UNIX_SHA256_PASS,
	UNIX_SHA512_PASS, and UNIX_ALGO_ROUNDS ctrls.
	(pam_sm_chauthtok): Refactor out new password encryption.
	* modules/pam_unix/passverify.c(crypt_make_salt): New function.
	(crypt_md5_wrapper): Call crypt_make_salt().
	(create_password_hash): New function refactored out of
	pam_sm_chauthtok(). Support for new password hashes.
	* modules/pam_unix/passverify.h: Drop ascii_to_bin() and bin_to_ascii()
	macros. Add prototype for create_password_hash().
	* modules/pam_unix/unix_update.8.xml: New file.
	* modules/pam_unix/unix_chkpwd.8.xml: Likewise.

	* modules/pam_unix/Makefile.am: Add unix_update helper.
	* modules/pam_unix/pam_unix_passwd.c: Move functions i64c(),
	crypt_md5_wrapper(), save_old_password(), _update_passwd() and